--- a/app/views/pages/continue.html.erb
+++ b/app/views/pages/continue.html.erb
@@ -7,7 +7,7 @@
         <h1>Thank you!</h1>
         <p><br>Thank you for participating in your first writer's conference. Please check back soon for more information.</p>
         <p>
-		<button type="submit" class="btn"><%= link_to("Logout", destroy_user_session_path(current_user), method: :delete)%></button>
+		<button type="submit" class="btn"><%= link_to("Logout", destroy_user_session_path(current_user), method: => :delete)%></button>
         </p>
       </div>
 
